--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <article>
         <section class="container">
           <label name="lab" class="first" for="btn1"> Dropdown </label>
-          <input type="checkbox" checked name="btn1" id="btn1" />
+          <input type="checkbox" name="btn1" id="btn1" />
           <span class="upArrrow">
             <label class="labArr" for="btn1">△</label></span
           >
